# libdpfp

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  libdpfp.pc.in
examples/: Makefile.am  Makefile.in  capture_continuous.c  capture_continuous_gtk.c  capture_finger.c  capture_finger_enhanced.c  enhance_from_file.c  match_finger.c
libdpfp/: Makefile.am  Makefile.in  dpfp.c  dpfp.h  dpfp_fprint.c  dpfp_fprint_efinger.c  dpfp_fprint_fvs.c  dpfp_hw.c  dpfp_private.h  dpfp_simple.c
